# arm-bare-rtos

./: CMakeLists.txt  LICENSE.md  README.md  main.c
cmake/: FindCMSIS.cmake  README.md
doc/: README.c.md  README.cpp.md  README.md
examples/: README.md
examples/cpp-rp2040/: CMakeLists.txt  main.cpp
examples/nrf52-pinetime/: CMakeLists.txt  main.c
examples/rp2040/: CMakeLists.txt  README.md  main.c  main.cpp
examples/stm32f4/: CMakeLists.txt  main.c  toolchain-arm-gcc.cmake
src/kernel/: api.h  arm_arch.h  kernel.c  kernel.cpp  kernel.h
